# Pinterest-Clone-BIL-314

./: .gitignore  BIL314_Proje_Raporu (1).docx  GIT_REHBERI.md  Pinterest-Clone-Sunum (2).pptx  README.md
client/: CMakeLists.txt
client/src/: apiclient.cpp  apiclient.hpp  imageviewer.cpp  imageviewer.hpp  loginwindow.cpp  loginwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mediacard.cpp  mediacard.hpp  mediainfo.cpp  mediainfo.hpp  networkclient.cpp  networkclient.hpp  videoviewer.cpp  videoviewer.hpp
common/: constants.hpp
docs/: AI_KULLANIM_REHBERI.md  CLAUDE_CONTEXT.md  CLIENT_REHBERI.md  PROTOCOL.md  README.md  ROADMAP.md  SERVER_REHBERI.md  schema.sql
server/: .gitignore  CMakeLists.txt
server/src/: auth.cpp  auth.hpp  db.cpp  db.hpp  main.cpp  media.cpp  media.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_cache.cpp  session_cache.hpp  util.cpp  util.hpp
server/tests/: test_main.cpp
